--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -14,4 +14,6 @@ $primary-font: 'Roboto', sans-serif;
   --background-body: #ffffff;
   --modal-text-color: #8c8c8c;
   --secondary-bg-color: #ff6b08;
+  --base-stroke-color: #818181;
+  --hover-navigation-btn: #a9a9a9;
 }
