--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,9 +24,15 @@
               My library
             </button>
           </li>
+          <li class="navigation__item">
+            <button id="library" class="navigation__button my-library__btn" type="button">
+              Log in
+            </button>
+          </li>
         </ul>
       </nav>
     </div>
+    
     <form class="input__wrapper search-form">
       <input
         class="header__input"
@@ -41,6 +47,7 @@
         </svg>
       </button>
     </form>
+
     <div class="library-btn__list is-hidden-header">
       <button id="watched-lang" class="library-btn watched-btn active" type="button">
         Watched
