modal form authorization

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,4 +18,6 @@
 @import "./components/film-modal";
 @import './components/search-form';
 @import "./components/scrolltop";
+@import "./components/_modal-form";
+
 
