--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,14 +25,18 @@
             </button>
           </li>
           <li class="navigation__item">
-            <button id="library" class="navigation__button my-library__btn" type="button">
+            <button
+              id="log-lang"
+              class="navigation__button my-library__btn btn-author-modal-open"
+              type="button"
+            >
               Log in
             </button>
           </li>
         </ul>
       </nav>
     </div>
-    
+
     <form class="input__wrapper search-form">
       <input
         class="header__input"
