--- a/src/templates/film-modal.hbs
+++ b/src/templates/film-modal.hbs
@@ -6,6 +6,14 @@
     </svg>
   </button>
   <div class='film-poster-wrapper'>
+    <button class='modal-btn-trailer' type='button'>
+      <img
+        class='youtube-icon'
+        src='https://download.logo.wine/logo/YouTube/YouTube-Icon-Full-Color-Logo.wine.png'
+        width='90'
+        height='70'
+      />
+    </button>
     <img
       class='film-poster-img'
       src='https://image.tmdb.org/t/p/w500/{{poster_path}}'
