--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,10 +1,9 @@
-// стили header
 
 .header {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url(../images/header/header-mob@1.jpg);
   background-repeat: no-repeat;
-  background-color: var(--primary-text-color);
+  background-color: black;
   background-position: center;
   background-size: cover;
   width: 100%;
@@ -17,7 +16,7 @@
 
   &__my-library {
     background-repeat: no-repeat;
-    background-color: var(--primary-text-color);
+    background-color: black;
     background-position: center;
     width: 100%;
     height: 230px;
@@ -35,10 +34,14 @@
   (min-resolution: 192dpi) and (min-width: 320px),
   (min-resolution: 2dppx) and (min-width: 320px) {
   .header {
+    width: 100%;
+    height: 230px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
       url(../images/header/header-mob@2x.jpg);
 
     &__my-library {
+      width: 100%;
+      height: 230px;
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
         url(../images/header__my-library/my-lib-header-mob@2x.jpg);
     }
@@ -71,12 +74,12 @@
   animation-timing-function: ease;
   animation-duration: 5000ms;
   animation-iteration-count: infinite;
-  stroke: var(--base-stroke-color);
+  stroke: #818181;
   margin-right: 10px;
 }
 
 .logo__list:hover .logo__icon {
-  stroke: var(--secondary-bg-color);
+  stroke: #ff6b08;
   transition: stroke 300ms;
 }
 
@@ -105,11 +108,11 @@
   font-size: 12px;
   line-height: 14px;
   text-transform: uppercase;
-  color: var(--secondary-title-color);
+  color: #ffffff;
   background-color: inherit;
 
   &:hover {
-    color: var(--hover-navigation-btn);
+    color: darkgrey;
     transition: color 300ms;
   }
 }
@@ -127,7 +130,7 @@
 
   &:hover,
   &:focus {   
-    border-bottom: 1px solid var(--secondary-bg-color);
+    border-bottom: 1px solid #ff6b08;
     transition: border-bottom 500ms;
   }
 }
@@ -137,7 +140,7 @@
   line-height: 16px;
   padding-left: 1px;
 
-  color: var(--secondary-title-color);
+  color: #ffffff;
 }
 
 .input__wrapper {
@@ -172,7 +175,7 @@
   content: '';
   height: 3px;
   width: 100%;
-  background-color: var(--secondary-bg-color);
+  background-color: #ff6b08;
   margin-bottom: 20px;
 }
 
@@ -190,11 +193,15 @@
 @media screen and (min-width: 768px) {
   .header {
     padding-top: 41px;
+    width: 100%;
+    height: 219px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
       url(../images/header/header-tab@1.jpg);
 
     &__my-library {
       padding-top: 41px;
+      width: 100%;
+      height: 219px;
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
         url(../images/header__my-library/my-lib-header-tab@1.jpg);
     }
@@ -205,10 +212,14 @@
     (min-resolution: 192dpi) and (min-width: 768px),
     (min-resolution: 2dppx) and (min-width: 768px) {
     .header {
+      width: 100%;
+      height: 219px;
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
         url(../images/header/header-tab@2x.jpg);
 
       &__my-library {
+        width: 100%;
+        height: 219px;
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
           url(../images/header__my-library/my-lib-header-mob@2x.jpg);
       }
@@ -220,7 +231,7 @@
     font-weight: 500;
     font-size: 30px;
     line-height: 35px;
-    color: var(--secondary-title-color);
+    color: #ffffff;
     cursor: pointer;
   }
 
@@ -245,11 +256,15 @@
 //DESKTOP
 @media screen and (min-width: 1024px) {
   .header {
+    width: 100%;
+    height: 216px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
       url(../images/header/header-desk@1.jpg);
       
 
     &__my-library {
+      width: 100%;
+      height: 216px;
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
         url(../images/header__my-library/my-lib-header-desk@1.jpg);
     }
@@ -260,7 +275,6 @@
     font-weight: 500;
     font-size: 30px;
     line-height: 35px;
-    color: var(--secondary-title-color);
   }
 
   .input__wrapper {
@@ -273,10 +287,14 @@
     (min-resolution: 192dpi) and (min-width: 1024px),
     (min-resolution: 2dppx) and (min-width: 1024px) {
     .header {
+      width: 100%;
+      height: 216px;
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
         url(../images/header/header-desk@2x.jpg);
 
       &__my-library {
+        width: 100%;
+        height: 216px;
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
           url(../images/header__my-library/my-lib-header-desk@2x.jpg);
         background-position: top;
@@ -315,8 +333,8 @@ input {
   text-transform: uppercase;
 
   border-radius: 5px;
-  border: 1px solid var(--secondary-title-color);
-  color: var(--secondary-title-color);
+  border: 1px solid #ffffff;
+  color: #ffffff;
   background-color: transparent;
 
   width: 130px;
@@ -353,3 +371,5 @@ input {
   display: none;
   pointer-events: none;
 }
+
+
