--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,3 @@
-<section class="container">
-    <ul class="list cards-collection">
-        
-    </ul>
+<section id="gallery-section" class="container">
+  <ul class="list cards-collection"></ul>
 </section>
