--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,19 +1,16 @@
 <div class="container pagination">
-    <button class="pagination-button arrow-left">
+    <button class="pagination-button" id="arrow-left" value="prev">
         <svg width="16" height="16" class="left-arrow">
             <use href="images/sprite.svg#icon-arrow-left"></use>
         </svg>
     </button>
-    <button class="pagination-button first-button">1</button>
-    <span class="dots" id="previous">...</span>
+    <!-- <button class="pagination-button first-button">1</button>
+    <span class="dots js-previous-dots">...</span>
     <button class="pagination-button pagination--current" data-page="1">1</button>
-    <button class="pagination-button" data-page="2">2</button>
-    <button class="pagination-button" data-page="3">3</button>
-    <button class="pagination-button" data-page="4">4</button>
-    <button class="pagination-button" data-page="5">5</button>
-    <span class="dots" id="after">...</span>
-    <button class="pagination-button last-button"></button>
-    <button class="pagination-button arrow-right">
+    
+    <span class="dots js-after-dots">...</span>
+    <button class="pagination-button last-button"></button> -->
+    <button class="pagination-button" id="arrow-right" value="next">
         <svg width="16" height="16" class="product__icon">
             <use href="images/sprite.svg#icon-arrow-right"></use>
         </svg>
