--- a/src/sass/components/_modal-team.scss
+++ b/src/sass/components/_modal-team.scss
@@ -14,7 +14,6 @@
   list-style: none;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .team__item {
@@ -25,12 +24,14 @@
   padding: 10px;
   perspective: 600px;
   text-align: center;
+  background-color:   rgba(245, 124, 50, 0.12);
 }
 
 .team__item:hover {
   transform: scale(1.05);
   transition: transform var(--animation-duration) var(--timing-function);
-  box-shadow: 0px 0px 2px 0px rgba(255, 127, 27, 0.88);
+  box-shadow: 0px 4px 4px rgba(245, 124, 50, 0.12), 0px 4px 4px rgba(245, 124, 50, 0.12),
+  1px 4px 6px rgba(245, 124, 50, 0.12);
 }
 
 .team__image {
@@ -39,48 +40,43 @@
   border-radius: 50%;
   object-fit: cover;
   margin: 10px auto 0;
-
-  
 }
-.team-meta {
 
+.team-meta {
   padding: 10px;
   font-weight: 700;
 }
+
 .team-meta p {
   margin-top: 0;
   margin-bottom: 0;
   letter-spacing: 0.1em;
 }
+
 .front,
 .back {
-  
   position: absolute;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
-  box-shadow: 2px 2px 2px 2px rgba(255, 126, 27, 0.30);
   transition: 1s;
   backface-visibility: hidden;
   border-radius: 10px;
 }
+
 .front {
-  background: #ffffff;
-  
-  
+  background: #ffffff;  
 }
+
 .back {
   padding: 20px;
- 
   background-color: #f5f3f3;
   transform: rotateY(180deg);
 }
+
 .clicked .front {transform: rotateY(360deg);}
 .clicked .back {transform: rotateY(360deg);}
-
-
-
 
 .is-hidden {
   opacity: 0;
@@ -89,41 +85,31 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
 }
-
     
 .modal {
   position: relative;
   padding: 40px;
-  
   background-color: #b8b4a7;
-  box-shadow: 1px solid rgba(255, 127, 27, 0.88);
+  box-shadow: 0px 4px 4px rgba(245, 124, 50, 0.12), 0px 4px 4px rgba(245, 124, 50, 0.12),
+  1px 4px 6px rgba(245, 124, 50, 0.12);
   border-radius: 4px;
   transition: transform 550ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-left: auto;
   margin-right: auto;
-}
 
-@media screen and (min-widht: 768px) {
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1.1);
+  @media screen and (min-widht: 768px) {
+      position: absolute;
+      width: 760px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(1.1);
   }
-}
 
-@media screen and (min-width: 480px) {
-  .modal {
-    width: 450px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .modal {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1.1);
-    width: 1140px;
+  @media screen and (min-width: 1200px) { 
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%) scale(1.1);
   }
 }
 
@@ -131,11 +117,11 @@
   padding: 0;
   width: 18px;
   height: 18px;
-  fill: #f0b58f;
+  fill: #ff6b08;
 }
 
 .modal__icon:hover {
-  fill: #ff6b08;
+  transform: scale(1.3);
 }
 
 .modal__button {
@@ -155,7 +141,7 @@
 } 
 
 .backdrop {
-  padding: 93px 15px;
+  padding: 20px;
   overflow-y: scroll;
   opacity: 1;
   width: 100%;
@@ -174,19 +160,21 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(0.8);
 }
+
 body.modal-open {
   overflow: hidden;
 }
+
 .team__item-title {
   text-transform: uppercase;
   color: #ff6b08;
   line-height: 1.14;
   font-weight: 500;
   margin-bottom: 8px;
-
 }
+
 .team__item-text {
-  margin-top: 40px;
+  font-size: 14px;
   color: #212121;
   font-weight: 400;
   line-height: 1.14;
