local-storage динамічна зміна кнопок
Поки що не перевіряє наявні фільми перед маркапом, з цим трохи пізніше

--- a/src/templates/film-modal.hbs
+++ b/src/templates/film-modal.hbs
@@ -51,8 +51,8 @@
     <h3 class='film-modal-about original-title'>ABOUT</h3>
     <p class='film-modal-overview'>{{overview}}</p>
     <div class='film-modal-btns'>
-      <button class='modal-btn-watched' type='button'>add to Watched</button>
-      <button class='modal-btn-queue' type='button'>add to queue</button>
+      <button id="modal-btn-watched" class='modal-btn-watched' type='button'>add to Watched</button>
+      <button id="modal-btn-queue" class='modal-btn-queue' type='button'>add to queue</button>
     </div>
   </div>
 </div>
