--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,3 +1,4 @@
 <section id="gallery-section" class="container">
+  <h1 class="visually-hidden"> Movie cards </h1>
   <ul class="list cards-collection"></ul>
 </section>
