add visually-hidden class

--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -71,7 +71,7 @@
 }
 
 .card-text {
-    color: #FF6B08;
+    color: var(--title-text-color);
 }
 
 .card-poster {
@@ -84,10 +84,23 @@
     left: 0;
     width: 50px;
     height: 20px;
-    background-color: #FF6B08;
+    background-color: var(--secondary-bg-color);
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 5px;
+}
+
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
 }
