add onerror src

--- a/src/templates/list-of-movies.hbs
+++ b/src/templates/list-of-movies.hbs
@@ -5,7 +5,7 @@
         src='https://image.tmdb.org/t/p/w500{{poster_path}}'
         alt='{{title}}'
         loading='lazy'
-      />
+        onerror="this.onerror=null;this.src='https://www.successforumedu.com/uploads/logo/default.png?tr=fo-auto,di-';" />
       <span class='card-vote-average'>{{vote_average}}</span>
     </div>
     <div class='card-info'>
