update markup pages

--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,6 +1,6 @@
 <div class="container pagination">
     <button class="pagination-button" id="arrow-left" value="prev">
-        <svg width="16" height="16" class="left-arrow">
+        <svg class="pagination__icon">
             <use href="images/sprite.svg#icon-arrow-left"></use>
         </svg>
     </button>
@@ -11,7 +11,7 @@
     <span class="dots js-after-dots">...</span>
     <button class="pagination-button last-button"></button> -->
     <button class="pagination-button" id="arrow-right" value="next">
-        <svg width="16" height="16" class="product__icon">
+        <svg class="pagination__icon">
             <use href="images/sprite.svg#icon-arrow-right"></use>
         </svg>
     </button>
