add button to header for zsu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -64,6 +64,7 @@
       <button class="translate" id="e-lang-en">EN</button>
       <span class="translate__span">|</span>
       <button class="translate" id="e-lang-ua">UA</button>
+      <button id="zsu" class="zsu">Підтримати ЗСУ</button>
     </div>
   </div>
 </header>
