--- a/src/sass/components/_theme.scss
+++ b/src/sass/components/_theme.scss
@@ -34,29 +34,29 @@ body {
 
   @media screen and (max-width: 320px) {
     font-size: 20px;
-    top: 175px;
+    // top: 175px;
     // right: 5%;
   }
   @media screen and (min-width: 320px) {
     font-size: 20px;
-    top: 175px;
+    // top: 175px;
     // right: 5%;
   }
   @media screen and (min-width: 768px) {
     font-size: 30px;
-    top: 160px;
+    // top: 160px;
     // right: 5%;
   }
   @media screen and (min-width: 1024px) {
-    top: 160px;
+    // top: 160px;
     // right: 5%;
   }
   @media screen and (min-width: 1440px) {
-    top: 160px;
+    // top: 160px;
     // right: 18%;
   }
   @media screen and (min-width: 2560px) {
-    top: 160px;
+    // top: 160px;
     // right: 32%;
   }
 }
@@ -127,4 +127,32 @@ body {
   display: flex;
   justify-content: start;
   align-items: center;
+}   
+
+ 
+.zsu{
+  margin-left: auto;
+  color: rgb(49, 49, 231);
+  background-color: rgb(240, 237, 56);
+font-size: 800;
+  height: 35px;
+  width: 170px;
+  border-radius: 7px;
+  text-shadow: 0px 2px 3px rgba(225, 224, 233, 0.5);
+   box-shadow: 0px 3px 1px rgba(43, 8, 243, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(98, 3, 250, 0.12);
+  &:hover,
+   &:focus{
+ background-color: rgb(255, 238, 0);
+ color: rgb(0, 0, 255);
+box-shadow: 0px 1px 1px rgba(29, 5, 243, 0.22), 0px 4px 4px rgba(29, 5, 245, 0.26),
+        1px 4px 6px rgba(2, 6, 250, 0.26);
+ }
+  &:active{
+    transform: scale(0.94);
+   
+  }
+  
 }
+
+
