--- a/src/sass/components/_search-form.scss
+++ b/src/sass/components/_search-form.scss
@@ -1,5 +1,8 @@
-.search-btn {
+.search-filter-form {
     position: relative;
+}
+
+.search-btn {
 
     display: flex;
     align-items: center;
@@ -7,9 +10,9 @@
     margin: 20px;
     padding: 10px 30px;
 
-    color: #f07829;
+    color: var(--secondary-bg-color);
     background-color: inherit;
-    box-shadow: 1px 1px 8px 1px rgba(255, 127, 27, 0.88);
+    box-shadow: 1px 1px 8px 1px var(--secondary-bg-color);
 
     transition: box-shadow 250ms linear, color 250ms linear;
 
@@ -31,8 +34,8 @@
     width: 1em;
     height: 1em;
 
-    stroke-width: 0;
-    stroke: currentColor;
+    // stroke-width: 0;
+    // stroke: currentColor;
     fill: currentColor;
 }
 
@@ -42,10 +45,10 @@
     display: none;
 
     @media screen and (min-width:768px) {
-            display: block;
-            padding: 30px 30px;
+        display: block;
+        padding: 30px 30px;
 
-            z-index: 99;
+        z-index: 99;
     }
 }
 
@@ -54,15 +57,18 @@
     @media screen and (max-width:767px) {
     display: block;
 
-    background-color: #ffffff;
-    border-bottom: 3px solid rgba(254, 136, 19, 0.35);
-    z-index: 99;
-
     position: absolute;
-    top: 50%;
+    top: -20px;
     left: 0;
+
+    background-color: var(--background-body);
+    border-bottom: 3px solid rgba(254, 136, 19, 0.35);
+
+    padding-bottom: 40px;
     width: 100%;
-    height: 100%;
+    height:fit-content;
+
+    z-index: 99;
     }
 }
 
@@ -77,7 +83,7 @@
     padding: 30px 30px;
     max-width: 250px;
 
-    box-shadow: 1px 1px 12px 3px rgba(255, 127, 27, 0.88);
+    box-shadow: 1px 1px 12px 3px var(--secondary-bg-color);
 
 
     @media screen and (min-width:768px) {
@@ -117,16 +123,11 @@
 }
 }
 
-
 select {
-    border: 1px solid rgb(230, 199, 142);
+    border: 1px solid rgb(207, 167, 94);
 }
 
 option {
     padding: 20px;
     background-color: rgb(246, 242, 238);
-}
-
-.first-opt {
-    background-color: rgb(235, 224, 245);
 }
