--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -4,8 +4,7 @@
     url(../images/header/header-mob@1.jpg);
   background-repeat: no-repeat;
   background-color: black;
-  background-position: center;
-  background-size: cover;
+  background-position: top;
   width: 100%;
   height: 230px;
   padding-bottom: 97px;
@@ -17,7 +16,7 @@
   &__my-library {
     background-repeat: no-repeat;
     background-color: black;
-    background-position: center;
+    background-position: bottom;
     width: 100%;
     height: 230px;
     padding-bottom: 97px;
@@ -70,10 +69,6 @@
 }
 
 .logo__icon {
-  animation-name: icon;
-  animation-timing-function: ease;
-  animation-duration: 5000ms;
-  animation-iteration-count: infinite;
   stroke: #818181;
   margin-right: 10px;
 }
@@ -105,8 +100,8 @@
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
-  font-size: 12px;
-  line-height: 14px;
+  font-size: 10px;
+  line-height: 1.16;
   text-transform: uppercase;
   color: #ffffff;
   background-color: inherit;
@@ -124,7 +119,7 @@
   transition: border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1), stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-bottom: 4px;
   padding-left: 1px;
-  color: var(--secondary-title-color);
+  color: #ffffff;
   // border: none;
   outline: none;
 
@@ -136,8 +131,8 @@
 }
 
 .header__input::placeholder {
-  font-size: 14px;
-  line-height: 16px;
+  font-size: 12px;
+  line-height: 1.16;
   padding-left: 1px;
 
   color: #ffffff;
@@ -149,6 +144,7 @@
   display: block;
   box-sizing: border-box;
   position: relative;
+  margin-bottom: 25px;
 }
 
 .input__icon {
@@ -205,6 +201,17 @@
       background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
         url(../images/header__my-library/my-lib-header-tab@1.jpg);
     }
+
+    
+.navigation__button {
+  font-size: 12px;
+  line-height: 1.16;
+}
+
+.header__input::placeholder {
+  font-size: 14px;
+  line-height: 1.16;
+}
   }
 
   // dpr2 и 768px
@@ -221,7 +228,7 @@
         width: 100%;
         height: 219px;
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-          url(../images/header__my-library/my-lib-header-mob@2x.jpg);
+          url(../images/header__my-library/my-lib-header-tab@2x.jpg);
       }
     }
   }
@@ -297,7 +304,6 @@
         height: 216px;
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
           url(../images/header__my-library/my-lib-header-desk@2x.jpg);
-        background-position: top;
       }
     }
   }
