--- a/src/sass/components/_film-modal.scss
+++ b/src/sass/components/_film-modal.scss
@@ -197,3 +197,15 @@
     stroke: var(--secondary-bg-color);
   }
 }
+
+.trailer-container {
+    width: 280px;
+    @media screen and (min-width: 768px) {
+            width: 600px;
+            height: 500px;
+        }
+    @media screen and (min-width: 1024px) {
+        width: 1000px;
+        height: 700px;
+    }
+};
