--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -4,12 +4,14 @@
             <use href="images/sprite.svg#icon-arrow-left"></use>
         </svg>
     </button>
-    <!-- <button class="pagination-button first-button">1</button>
+    <button class="pagination-button first-button">1</button>
     <span class="dots js-previous-dots">...</span>
     <button class="pagination-button pagination--current" data-page="1">1</button>
     
+    <ul class="pagination__list"></ul>
+
     <span class="dots js-after-dots">...</span>
-    <button class="pagination-button last-button"></button> -->
+    <button class="pagination-button last-button"></button>
     <button class="pagination-button" id="arrow-right" value="next">
         <svg class="pagination__icon">
             <use href="images/sprite.svg#icon-arrow-right"></use>
