fixed bugs at the search form

--- a/src/partials/search-form.html
+++ b/src/partials/search-form.html
@@ -14,14 +14,12 @@
     <form class="genre-search" action="#" id="search-form">
       <label id="genr-lang" for="lang" class="search-label">Genres</label>
       <select name="genres" id="genres">
-        <legend></legend>
         <option id="all-genres-lang" value="genres">all genres</option>
       </select>
 
       <label id="year-lang" for="lang" class="search-label">Year</label>
-      <select name="genres" id="years">
-        <legend></legend>
-        <option class="first-opt" id="year-chose" value="year">year</option>
+      <select name="years" id="years">
+        <option id="year-chose" value="year">year</option>
         <option value="2022">2022</option>
         <option value="2021">2021</option>
         <option value="2020">2020</option>
@@ -31,8 +29,7 @@
       <label for="lang" class="search-label">
         <span id="popularity-lang">Popularity</span>
       </label>
-      <select name="genres" id="popularity">
-        <legend></legend>
+      <select name="popularity" id="popularity">
         <option id="p-lang" value="option">popularity</option>
         <option id="most-popular-lang" value="popularity">most popular first</option>
         <option id="users-choise-lang" value="vote_count">users choise first</option>
