add link to zsu button

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -64,7 +64,13 @@
       <button class="translate" id="e-lang-en">EN</button>
       <span class="translate__span">|</span>
       <button class="translate" id="e-lang-ua">UA</button>
-      <button id="zsu" class="zsu">Підтримати ЗСУ</button>
+      <button
+        onClick="javascript:window.open('https://savelife.in.ua/donate/', '_blank');"
+        id="zsu"
+        class="zsu"
+      >
+        Допомога ЗСУ
+      </button>
     </div>
   </div>
 </header>
