--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -1,3 +1,25 @@
 <div class="container pagination">
+    <button type="button" class="pagination-button arrow-left">
+        <svg class="pagination__icon">
+            <use href="images/sprite.svg#icon-arrow-left"></use>
+        </svg>
+    </button>
+    <button class="pagination-button first-button">1</button>
+    <span class="pagination-dots js-previous-dots">...</span>
+    <button class="pagination-button pagination--current" data-page="1">1</button>
     
+    <ul class="pagination__list">
+        
+        <!-- <li>
+            <button type="button" class="pagination-button"></button>
+        </li> -->
+        
+    </ul>
+    <span class="pagination-dots js-after-dots">...</span>
+    <button class="pagination-button last-button"></button>
+    <button type="button" class="pagination-button arrow-right">
+        <svg class="pagination__icon">
+            <use href="images/sprite.svg#icon-arrow-right"></use>
+        </svg>
+    </button>
 </div>
