--- a/src/templates/pagination.hbs
+++ b/src/templates/pagination.hbs
@@ -1,5 +1,5 @@
-
-<button type="button" class="pagination-button arrow-left"><<
+{{!-- 
+<button type="button" class="pagination-button arrow-left">
         <svg class="pagination__icon">
             <use href="../images/sprite.svg#icon-arrow-left"></use>
         </svg>
@@ -17,8 +17,8 @@
     </ul>
     {{!-- <span class="pagination-dots js-after-dots">...</span> --}}
     {{!-- <button class="pagination-button last-button"></button> --}}
-    <button type="button" class="pagination-button arrow-right">>>
+    <button type="button" class="pagination-button arrow-right">
         <svg class="pagination__icon">
             <use href="../images/sprite.svg#icon-arrow-right"></use>
         </svg>
-    </button>
+    </button> --}}
