--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -71,7 +71,7 @@ display: flex;
 align-items: center;
 }
 
-.pagination__current-btn {
+.pagination--current {
 background-color: #545454;
 height: 40px;
 width: 40px;
