--- a/src/partials/pagination.html
+++ b/src/partials/pagination.html
@@ -4,9 +4,9 @@
             <use href="images/sprite.svg#icon-arrow-left"></use>
         </svg>
     </button>
-    <button class="pagination-button first-button">1</button>
-    <span class="pagination-dots js-previous-dots">...</span>
-    <button class="pagination-button pagination--current" data-page="1">1</button>
+    <!-- <button class="pagination-button first-button">1</button>
+    <span class="pagination-dots js-previous-dots">...</span> -->
+    <!-- <button class="pagination-button pagination--current" data-page="1">1</button> -->
     
     <ul class="pagination__list">
         
