--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -72,7 +72,7 @@ align-items: center;
 }
 
 .pagination--current {
-background-color: #545454;
+background-color: #FF6B08;
 height: 40px;
 width: 40px;
 border-radius: 5px;
