--- a/src/sass/components/_scrolltop.scss
+++ b/src/sass/components/_scrolltop.scss
@@ -4,8 +4,12 @@
   right: 10px;
   transition: 0.6s all;
 
-  @media screen and (min-width: 1025px) {
+  @media screen and (min-width: 1440px) {
     right: 100px;
+  }
+
+  @media screen and (min-width: 2560px) {
+    right: 20%;
   }
 }
 
