--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -16,6 +16,9 @@ align-items: center;
 }
 
 .pagination-button {
+display: flex;
+justify-content: center;
+align-items: center;
 margin: 0 2px;
 padding: 12px;
 background-color: transparent;
