language-undefined-fixed + btns

--- a/src/templates/film-modal-uk.hbs
+++ b/src/templates/film-modal-uk.hbs
@@ -51,7 +51,7 @@
     <h3 class='film-modal-about original-title'>ІНФОРМАЦІЯ</h3>
     <p class='film-modal-overview'>{{overview}}</p>
     <div class='film-modal-btns'>
-      <button id='modal-btn-watched' class='modal-btn-watched' type='button'>В переглянуті</button>
+      <button id='modal-btn-watched' class='modal-btn-watched' type='button'>Додати до переглянутих</button>
       <button id='modal-btn-queue' class='modal-btn-queue' type='button'>До черги</button>
     </div>
   </div>
