--- a/src/partials/search-form.html
+++ b/src/partials/search-form.html
@@ -12,12 +12,12 @@
       </svg>
     </button>
     <form class="genre-search" action="#" id="search-form">
-      <label id="genr-lang" for="lang" class="search-label">Genres</label>
+      <div id="genr-lang" for="lang" class="search-form_div-lang">Genres</div>
       <select name="genres" id="genres">
         <option id="all-genres-lang" value="genres">all genres</option>
       </select>
 
-      <label id="year-lang" for="lang" class="search-label">Year</label>
+      <div id="year-lang" for="lang" class="search-form_div-lang">Year</div>
       <select name="years" id="years">
         <option id="year-chose" value="year">year</option>
         <option value="2022">2022</option>
@@ -26,9 +26,9 @@
         <option value="2019">2019</option>
       </select>
 
-      <label for="lang" class="search-label">
+      <div for="lang" class="search-form_div-lang">
         <span id="popularity-lang">Popularity</span>
-      </label>
+      </div>
       <select name="popularity" id="popularity">
         <option id="p-lang" value="option">popularity</option>
         <option id="most-popular-lang" value="popularity">most popular first</option>
