--- a/src/sass/components/_modal-form.scss
+++ b/src/sass/components/_modal-form.scss
@@ -3,7 +3,7 @@
   height: 500px;
 
   overflow: hidden;
-//   background: ;
+  background: var(--background-body);
   border-radius: 10px;
   box-shadow: 5px 20px 50px #000;
 }
@@ -19,7 +19,7 @@
 }
 
 .label-form {
-  color: #fff;
+  color: var(--primary-text-color);
   font-size: 2.3em;
   justify-content: center;
   display: flex;
@@ -33,7 +33,7 @@
 .input-form {
   width: 60%;
   height: 20px;
-  background: #fff;
+  background: rgba(225, 224, 233, 0.5);
   justify-content: center;
   display: flex;
   margin: 20px auto;
