--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,6 +32,13 @@
             >
               Log in
             </button>
+            <button
+              id="log-out"
+              class="navigation__button my-library__btn btn-log-out visually-hidden"
+              type="button"
+            >
+              Log out
+            </button>
           </li>
         </ul>
       </nav>
