bugfix at the search-form

--- a/src/partials/search-form.html
+++ b/src/partials/search-form.html
@@ -1,11 +1,11 @@
-<div class="search-filter-form">
+<div class="search-filter-form container">
 <button class="search-btn search-btn--open">
     <svg class="icon-droplet" width="14" height="14">
         <use href="./images/svg/search-form.svg#icon-filter"></use>
     </svg>
   </button>
 
-  <div class="search-form__wrap">
+  <div class="search-form__wrap container">
     <button class="search-btn search-btn--close">
       <svg class="icon-droplet" width="14" height="14">
         <use href="./images/svg/search-form.svg#icon-cross"></use>
@@ -25,7 +25,7 @@
         <option value="2020">2020</option>
         <option value="2019">2019</option>
       </select>
-
+<!-- 
       <div for="lang" class="search-form_div-lang">
         <span id="popularity-lang">Popularity</span>
       </div>
@@ -33,7 +33,7 @@
         <option id="p-lang" value="option">popularity</option>
         <option id="most-popular-lang" value="popularity">most popular first</option>
         <option id="users-choise-lang" value="vote_count">users choise first</option>
-      </select>
+      </select> -->
     </form>
   </div>
 </div>
