--- a/src/sass/components/_search-form.scss
+++ b/src/sass/components/_search-form.scss
@@ -7,6 +7,7 @@
   align-items: center;
 
   margin: 20px;
+  margin-left: 0;
   padding: 10px 30px;
 
   color: var(--secondary-bg-color);
@@ -40,6 +41,7 @@
   @media screen and (min-width: 768px) {
     display: block;
     padding: 30px 30px;
+    padding-bottom: 0;
 
     z-index: 99;
   }
@@ -69,8 +71,6 @@
   flex-direction: column;
   justify-content: start;
 
-  margin-left: auto;
-  margin-right: auto;
   padding: 30px 30px;
   max-width: 250px;
 
@@ -81,12 +81,10 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
 
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px 30px;
-    max-width: max-content;
+    padding: 20px 20px;
+    max-width: 400px;
 
     transition: box-shadow 250ms linear, transform 250ms linear;
 
@@ -116,6 +114,7 @@
 select {
   border: 1px solid rgb(207, 167, 94);
   border-radius: 5px;
+  width: 100px;
 }
 
 option {
